--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,7 @@ $grey-dark-mode: #43504E;
 $white-text: #fff;
 $primary:rgb(0, 132, 255);
 $bg-accent: #97DBD1;
+$bg-grey: #d7eeeb;
 
 html {
   margin: 0;
@@ -206,6 +207,62 @@ h1 {
   p {
     line-height: 1.5;
     letter-spacing: .6px;
+  }
+}
+
+.project-box {
+  padding: .7em;
+  margin-bottom: 1em;
+  background-color: $bg-grey;
+  min-height: 150px;
+  max-height: 150px;
+  position: relative;
+
+  .year-dev {
+    position: absolute;
+    right: 8px;
+    top: 16px;
+    color: $grey-dark-mode;
+  }
+
+  h2 {
+    margin: 0;
+    margin-bottom: .5em;
+    color: $main;
+  }
+
+  p {
+    margin: 0 0 .5em 0;
+    line-height: 1.3;
+    color: $main;
+    font-size: .95em;
+
+    a {
+      text-decoration: none;
+      color: $main;
+      font-weight: 500;
+      padding-right: 15px;
+
+      .icon {
+        padding-left: 5px;
+        vertical-align: bottom;
+
+        &:hover {
+          color: $accent;
+          stroke: $accent;
+        }
+      }
+
+      &:hover {
+        color: $accent;
+
+        svg {
+          stroke: $accent;
+        }
+        
+        
+      }
+    }
   }
 }
 
