--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -101,6 +101,18 @@ header {
       display: block;
       margin: auto;
 
+      @include respond-to('sm') {
+        position: absolute;
+        transform: scale(1.25);
+        z-index: -1;
+        /* top: -350px; */
+        top: -250px;
+        /* left: 20px; */
+        fill: #d7eeeb;
+        display: block;
+        margin: auto;
+      }
+
 
     }
   }
@@ -153,6 +165,11 @@ h1 {
 
 .main-header {
   height: 20rem;
+
+  @include respond-to('md') {
+    height: 22rem;
+    margin-top: 120px;
+  }
 }
 
 .main-header-img {
@@ -172,9 +189,17 @@ h1 {
 
 .bottom {
   @include respond-to('md') {
-    margin-top: 320px;
+    clear: both;
+    position: relative;
+    top: 150px;
     h1 {
       font-size: 1.75em;
+    }
+  }
+
+  @include respond-to('sm') {
+    h1 {
+      font-size: 1.45em;
     }
   }
 }
@@ -206,6 +231,11 @@ h1 {
     li {
       margin: none;
       font-size: 1.1em;
+
+      @include respond-to('sm') {
+          font-size: .9em;
+
+      }
     }
   }
 
@@ -259,6 +289,16 @@ h1 {
     margin: 0;
     margin-bottom: .5em;
     color: $main;
+
+    @include respond-to('xs') {
+      font-size: .9em;
+    }
+
+    @include respond-to('sm') {
+      font-size: 1em;
+    }
+
+    
   }
 
   p {
@@ -266,6 +306,16 @@ h1 {
     line-height: 1.3;
     color: $main;
     font-size: .95em;
+
+    @include respond-to('xs') {
+      font-size: .85em;
+    }
+
+    @include respond-to('sm') {
+      font-size: .90em;
+    }
+
+    
 
     a {
       text-decoration: none;
@@ -301,6 +351,11 @@ h1 {
   border-right: 3px solid $bg-grey;
   padding: 12px 0px;
   margin: 12px 0px;
+
+  @include respond-to('sm') {
+    border: none;
+    border-bottom: 3px solid $bg-grey;
+  }
 
   h2 {
     margin: 3px;
@@ -435,6 +490,8 @@ footer {
       align-items: center;
       display: flex;
       padding: 0;
+      margin-right: .5rem;
+      margin-left: .5rem;
     }
   }
 
