--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,7 +92,7 @@ body.dark-mode {
     color: white;
   }
 
-  footer {
+  footer, .mobile-nav {
     background: #129376;
 
     h1, a{
@@ -142,6 +142,13 @@ main {
   cursor:pointer;
   overflow: hidden;
   outline:none;
+
+  @include respond-to('sm') {
+    float: right;
+    position: absolute;
+    right: 0;
+    top: 36px;
+  }
 }
 
 .blob-rotate {
@@ -176,7 +183,7 @@ header {
         z-index: -1;
         /* top: -350px; */
         top: -250px;
-        /* left: 20px; */
+        left: -10px;
         fill: #d7eeeb;
         display: block;
         margin: auto;
@@ -335,7 +342,7 @@ h1 {
 
   p {
     line-height: 1.5;
-    letter-spacing: .6px;
+    letter-spacing: .4px;
   }
 }
 
@@ -512,8 +519,6 @@ footer {
     position: relative;
     text-align: center;
     padding-top: 2em;
-    margin-right: .5rem;
-    margin-left: .5rem;
     font-weight: 300;
     @include respond-to('lg') {
       max-width: 1280px;
@@ -522,6 +527,12 @@ footer {
     h1 {
       display: block;
       text-align: center;
+    }
+
+    a {
+      text-decoration: none;
+      font-weight: 500;
+      color: $main;
     }
   }
 
@@ -532,7 +543,7 @@ footer {
     background-size: 200%;
     transition: background-position .5s ease-out;
     text-decoration: none;
-    color: white;
+    color: white !important;
     font-weight: 600;
     font-size: 1.5em;
     letter-spacing: 1px;
@@ -544,19 +555,44 @@ footer {
 
   .footer-items {
     position: relative;
+    @include respond-to ('sm') {
+      position: initial;
+    }
+
   }
 
   .copyright {
-    font-size: .8em;
+    font-size: .7em;
     position: absolute;
     bottom: 0;
     left: 0;
+
+    
+
+    @include respond-to ('sm') {
+      position: initial;
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
   }
 
   .links {
     position: absolute;
     bottom: 0;
     right: 0;
+
+    @include respond-to('sm') {
+      position: initial;
+      display: flex;
+      justify-items: center;
+      justify-content: center;
+      text-align: center;
+      nav:first-of-type
+      {
+        display: none;
+      }
+    }
 
     nav {
       display: flex;
@@ -576,6 +612,7 @@ footer {
     bottom: 0;
     width: 100%;
     background-color: $bg-accent;
+    height: 5em;
 
     .icon {
       stroke: $main;
@@ -600,6 +637,7 @@ footer {
       padding: 0;
       margin-right: .5rem;
       margin-left: .5rem;
+      justify-content: center;
     }
   }
 
