--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -117,6 +117,26 @@ body.dark-mode {
       color: $bg-dark-accent;
     }
   }
+
+  .box-a-button {
+    padding: .3em .7em;
+    border: 1.5px solid $bg-dark-accent;
+    border-radius: .25em;
+    background-size: 200%;
+    background-color: $bg-dark-accent;
+    transition: background-position .5s ease-out;
+    text-decoration: none;
+    color: white;
+    font-weight: 400;
+    font-size: 1.2em;
+    letter-spacing: 1px;
+
+    &:hover {
+      background-position: 100%;
+      color: white;
+      background-color: $accent;
+    }
+  }
 }
 
 
@@ -343,6 +363,26 @@ h1 {
   p {
     line-height: 1.5;
     letter-spacing: .4px;
+  }
+
+  .box-a-button {
+    padding: .3em .7em;
+    border: 1.5px solid $accent;
+    border-radius: .25em;
+    background-size: 200%;
+    background-color: white;
+    transition: background-position .5s ease-out;
+    text-decoration: none;
+    color: $accent;
+    font-weight: 400;
+    font-size: 1.2em;
+    letter-spacing: 1px;
+
+    &:hover {
+      background-position: 100%;
+      color: white;
+      background-color: $accent;
+    }
   }
 }
 
